--- a/src/main/resources/assets/buffmobs/lang/en_us.json
+++ b/src/main/resources/assets/buffmobs/lang/en_us.json
@@ -354,5 +354,131 @@
   "text.autoconfig.buffmobs.option.rangedMeleeSwitching.sweepingEdgeUnlockDay.@Tooltip[1]": "Default: Day 21.",
   "text.autoconfig.buffmobs.option.rangedMeleeSwitching.sweepingEdgeMaxLevel": "Sweeping Edge Max Level",
   "text.autoconfig.buffmobs.option.rangedMeleeSwitching.sweepingEdgeMaxLevel.@Tooltip[0]": "Maximum level for Sweeping Edge enchantment.",
-  "text.autoconfig.buffmobs.option.rangedMeleeSwitching.sweepingEdgeMaxLevel.@Tooltip[1]": "Default: 3 (vanilla maximum)."
+  "text.autoconfig.buffmobs.option.rangedMeleeSwitching.sweepingEdgeMaxLevel.@Tooltip[1]": "Default: 3 (vanilla maximum).",
+  "text.autoconfig.buffmobs.option.mobPresets": "Mob Presets",
+  "text.autoconfig.buffmobs.option.mobPresets.enabled": "Enable Mob Presets",
+  "text.autoconfig.buffmobs.option.mobPresets.enabled.@Tooltip[0]": "Use custom presets for specific mobs.",
+  "text.autoconfig.buffmobs.option.mobPresets.enabled.@Tooltip[1]": "Overrides dimension and default scaling for mapped mobs.",
+
+  "text.autoconfig.buffmobs.option.mobPresets.preset1": "Preset 1",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2": "Preset 2",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3": "Preset 3",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4": "Preset 4",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5": "Preset 5",
+
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.presetName": "Preset Name",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.presetName.@Tooltip[0]": "Unique name for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.presetName.@Tooltip[1]": "Used in mobMapping to assign mobs to this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.healthMultiplier": "Health Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.healthMultiplier.@Tooltip[0]": "Health multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.healthMultiplier.@Tooltip[1]": "2.0 = double health, 0.5 = half health.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.damageMultiplier": "Damage Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.damageMultiplier.@Tooltip[0]": "Damage multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.damageMultiplier.@Tooltip[1]": "1.5 = 50% more damage, 0.8 = 20% less damage.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.speedMultiplier": "Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.speedMultiplier.@Tooltip[0]": "Movement speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.speedMultiplier.@Tooltip[1]": "1.2 = 20% faster, 0.9 = 10% slower.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.attackSpeedMultiplier": "Attack Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.attackSpeedMultiplier.@Tooltip[0]": "Attack speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.attackSpeedMultiplier.@Tooltip[1]": "Higher values = more frequent attacks.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.armorAddition": "Armor Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.armorAddition.@Tooltip[0]": "Flat armor points added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.armorAddition.@Tooltip[1]": "Each point reduces damage by ~4%.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.armorToughnessAddition": "Armor Toughness Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.armorToughnessAddition.@Tooltip[0]": "Flat armor toughness added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset1.armorToughnessAddition.@Tooltip[1]": "Reduces effectiveness of high-damage attacks.",
+
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.presetName": "Preset Name",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.presetName.@Tooltip[0]": "Unique name for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.presetName.@Tooltip[1]": "Used in mobMapping to assign mobs to this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.healthMultiplier": "Health Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.healthMultiplier.@Tooltip[0]": "Health multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.healthMultiplier.@Tooltip[1]": "2.0 = double health, 0.5 = half health.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.damageMultiplier": "Damage Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.damageMultiplier.@Tooltip[0]": "Damage multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.damageMultiplier.@Tooltip[1]": "1.5 = 50% more damage, 0.8 = 20% less damage.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.speedMultiplier": "Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.speedMultiplier.@Tooltip[0]": "Movement speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.speedMultiplier.@Tooltip[1]": "1.2 = 20% faster, 0.9 = 10% slower.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.attackSpeedMultiplier": "Attack Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.attackSpeedMultiplier.@Tooltip[0]": "Attack speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.attackSpeedMultiplier.@Tooltip[1]": "Higher values = more frequent attacks.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.armorAddition": "Armor Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.armorAddition.@Tooltip[0]": "Flat armor points added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.armorAddition.@Tooltip[1]": "Each point reduces damage by ~4%.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.armorToughnessAddition": "Armor Toughness Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.armorToughnessAddition.@Tooltip[0]": "Flat armor toughness added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset2.armorToughnessAddition.@Tooltip[1]": "Reduces effectiveness of high-damage attacks.",
+
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.presetName": "Preset Name",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.presetName.@Tooltip[0]": "Unique name for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.presetName.@Tooltip[1]": "Used in mobMapping to assign mobs to this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.healthMultiplier": "Health Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.healthMultiplier.@Tooltip[0]": "Health multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.healthMultiplier.@Tooltip[1]": "2.0 = double health, 0.5 = half health.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.damageMultiplier": "Damage Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.damageMultiplier.@Tooltip[0]": "Damage multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.damageMultiplier.@Tooltip[1]": "1.5 = 50% more damage, 0.8 = 20% less damage.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.speedMultiplier": "Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.speedMultiplier.@Tooltip[0]": "Movement speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.speedMultiplier.@Tooltip[1]": "1.2 = 20% faster, 0.9 = 10% slower.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.attackSpeedMultiplier": "Attack Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.attackSpeedMultiplier.@Tooltip[0]": "Attack speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.attackSpeedMultiplier.@Tooltip[1]": "Higher values = more frequent attacks.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.armorAddition": "Armor Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.armorAddition.@Tooltip[0]": "Flat armor points added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.armorAddition.@Tooltip[1]": "Each point reduces damage by ~4%.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.armorToughnessAddition": "Armor Toughness Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.armorToughnessAddition.@Tooltip[0]": "Flat armor toughness added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset3.armorToughnessAddition.@Tooltip[1]": "Reduces effectiveness of high-damage attacks.",
+
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.presetName": "Preset Name",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.presetName.@Tooltip[0]": "Unique name for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.presetName.@Tooltip[1]": "Used in mobMapping to assign mobs to this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.healthMultiplier": "Health Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.healthMultiplier.@Tooltip[0]": "Health multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.healthMultiplier.@Tooltip[1]": "2.0 = double health, 0.5 = half health.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.damageMultiplier": "Damage Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.damageMultiplier.@Tooltip[0]": "Damage multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.damageMultiplier.@Tooltip[1]": "1.5 = 50% more damage, 0.8 = 20% less damage.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.speedMultiplier": "Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.speedMultiplier.@Tooltip[0]": "Movement speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.speedMultiplier.@Tooltip[1]": "1.2 = 20% faster, 0.9 = 10% slower.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.attackSpeedMultiplier": "Attack Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.attackSpeedMultiplier.@Tooltip[0]": "Attack speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.attackSpeedMultiplier.@Tooltip[1]": "Higher values = more frequent attacks.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.armorAddition": "Armor Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.armorAddition.@Tooltip[0]": "Flat armor points added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.armorAddition.@Tooltip[1]": "Each point reduces damage by ~4%.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.armorToughnessAddition": "Armor Toughness Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.armorToughnessAddition.@Tooltip[0]": "Flat armor toughness added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset4.armorToughnessAddition.@Tooltip[1]": "Reduces effectiveness of high-damage attacks.",
+
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.presetName": "Preset Name",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.presetName.@Tooltip[0]": "Unique name for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.presetName.@Tooltip[1]": "Used in mobMapping to assign mobs to this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.healthMultiplier": "Health Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.healthMultiplier.@Tooltip[0]": "Health multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.healthMultiplier.@Tooltip[1]": "2.0 = double health, 0.5 = half health.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.damageMultiplier": "Damage Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.damageMultiplier.@Tooltip[0]": "Damage multiplier for mobs using this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.damageMultiplier.@Tooltip[1]": "1.5 = 50% more damage, 0.8 = 20% less damage.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.speedMultiplier": "Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.speedMultiplier.@Tooltip[0]": "Movement speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.speedMultiplier.@Tooltip[1]": "1.2 = 20% faster, 0.9 = 10% slower.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.attackSpeedMultiplier": "Attack Speed Multiplier",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.attackSpeedMultiplier.@Tooltip[0]": "Attack speed multiplier for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.attackSpeedMultiplier.@Tooltip[1]": "Higher values = more frequent attacks.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.armorAddition": "Armor Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.armorAddition.@Tooltip[0]": "Flat armor points added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.armorAddition.@Tooltip[1]": "Each point reduces damage by ~4%.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.armorToughnessAddition": "Armor Toughness Addition",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.armorToughnessAddition.@Tooltip[0]": "Flat armor toughness added for this preset.",
+  "text.autoconfig.buffmobs.option.mobPresets.preset5.armorToughnessAddition.@Tooltip[1]": "Reduces effectiveness of high-damage attacks.",
+
+  "text.autoconfig.buffmobs.option.mobPresets.mobMapping": "Mob to Preset Mapping",
+  "text.autoconfig.buffmobs.option.mobPresets.mobMapping.@Tooltip[0]": "Map specific mobs to presets.",
+  "text.autoconfig.buffmobs.option.mobPresets.mobMapping.@Tooltip[1]": "Format: 'minecraft:zombie:default'",
+  "text.autoconfig.buffmobs.option.mobPresets.mobMapping.@Tooltip[2]": "Format: 'mobid:presetname' separated by colon.",
+  "text.autoconfig.buffmobs.option.mobPresets.mobMapping.@Tooltip[3]": "Unmapped mobs use dimension/default scaling."
 }
